--- a/index.html
+++ b/index.html
@@ -38,9 +38,8 @@
                     </ul>
                 </div>
             </div>
-            <div class="row">
+            <div class="row" id="title-divs">
                 <div class="col">
-                    <p></p>
                 </div>
                 <div class="col">
                     <div class="welcome">
@@ -53,7 +52,6 @@
                     </div>
                 </div>
                 <div class="col">
-                    <p></p>
                 </div>
             </div>
             <div class="row">
@@ -133,7 +131,7 @@
                                 <h2>katie's links</h2>
                             </div>
                             <div class="row" id="links">
-                                <div class="col">
+                                <div class="col-2">
                                     <a href="https://github.com/thekatiedee" target="_blank"><ion-icon name="logo-github"></ion-icon>  GitHub</a>
                                 </div>
                                 <div class="col">
