changed "technology" to "product"

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                             </div>
                             <h3>solutions specialist</h3>
                             <h4>2018-2019</h4>
-                            <p>In this role, I worked closely with Development, Quality Assurance (QA), and the rest of the Solutions Team to solve customer issues. I created process documentation for the webinar technology. I conducted QA tests on webcasts and for virtual events. I trained self-service clients on the STUDIO webinar/VX online events technologies. I assisted internal and external team members with troubleshooting the product. I also engineered and shadowed webcasts.</p>
+                            <p>In this role, I worked closely with Development, Quality Assurance (QA), and the rest of the Solutions Team to solve customer issues. I created process documentation for the webinar product. I conducted QA tests on webcasts and for virtual events. I trained self-service clients on the STUDIO webinar/VX online events technologies. I assisted internal and external team members with troubleshooting the product. I also engineered and shadowed webcasts.</p>
                             <p>I utilized my HTML and CSS knowledge to correct event layouts, emails, and documentation. Finally, I logged bugs in the Microsoft TFS system and tracked internal/external helpdesk tickets through Zendesk.</p>
                             <h3>project manager</h3>
                             <h4>2016-2018</h4>
