--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col">
+                <div class="col" id="col-left">
                 </div>
                 <div class="col-6">                
                     <div id="about-katie-div">
@@ -80,14 +80,15 @@
                             <h4>2020</h4>
                             <p>This was my first experience ghostwriting! In this role, I wrote an array of articles, all centering around insurance. Some of the topics I wrote about included life insurance and accidental death and dismemberment insurance. A light read, I know. Click through to read more.</p>
                             <div id="techWriterOne">
-                                <button type="button" class="btn btn-outline-dark" onclick="writingSample()">see a writing sample</button>
+                                <button type="button" class="btn btn-outline-dark" style="font-size:.8rem;"
+                                onclick="writingSample()">see a writing sample</button>
                             </div>
                             <div id="techWriterTwo">
-                                <button type="button" class="btn btn-outline-dark" onclick="writingSampleTwo()">see another writing sample</button>
+                                <button type="button" class="btn btn-outline-dark" style="font-size:.7rem;" onclick="writingSampleTwo()">see another writing sample</button>
                             </div>
                             <h3>solutions specialist</h3>
                             <h4>2018-2019</h4>
-                            <p>In this role, I worked closely with Development, Quality Assurance (QA), and the rest of the Solutions Team to solve customer issues. I created process documentation for the webinar product. I conducted QA tests on webcasts and for virtual events. I trained self-service clients on the STUDIO webinar/VX online events technologies. I assisted internal and external team members with troubleshooting the product. I also engineered and shadowed webcasts.</p>
+                            <p>In this role, I worked closely with Development, Quality Assurance (QA), and the rest of the Solutions Team to solve customer issues. I created process documentation for the webinar technology. I conducted QA tests on webcasts and for virtual events. I trained self-service clients on the STUDIO webinar/VX online events technologies. I assisted internal and external team members with troubleshooting the product. I also engineered and shadowed webcasts.</p>
                             <p>I utilized my HTML and CSS knowledge to correct event layouts, emails, and documentation. Finally, I logged bugs in the Microsoft TFS system and tracked internal/external helpdesk tickets through Zendesk.</p>
                             <h3>project manager</h3>
                             <h4>2016-2018</h4>
@@ -111,7 +112,7 @@
                             <h4>Ivy Tech Community College</h4>
                             <p>In this program, I honed my HTML/CSS skills, learned Python, JavaScript, the basics of JQuery, and will be learning PHP the second half of the Fall Semester.</p>
                             <p>Expected Graduation December 2021.</p>
-                            <h3>BA in Telecommunications</h3>
+                            <h3 id="telecom">BA in Telecommunications</h3>
                             <h4>2009-2013</h4>
                             <h4>Indiana University Bloomington</h4>
                             <p>While studying at IU, I focused on Telecommunications and Television Project Management, along with Gender Studies.</p>
@@ -144,7 +145,7 @@
                                     <div class="col">
                                         <p><ion-icon name="call-outline"></ion-icon>
                                             (765) 551-7630</p>
-                                        <p><ion-icon name="mail-outline"></ion-icon><a href="mailto:katie.m.diamond@gmail.com?subject=Let's%20chat!">  katie.m.diamond@gmail.com</a></p>
+                                        <p><ion-icon name="mail-outline"></ion-icon><a id="email" href="mailto:katie.m.diamond@gmail.com?subject=Let's%20chat!">  katie.m.diamond@gmail.com</a></p>
                                     </div>
                                 </div>
                             </div>
