update to telephone number

--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
                                 <div class="row">
                                     <div class="col">
                                         <p><ion-icon name="call-outline"></ion-icon>
-                                            (765) 551-7630</p>
+                                            <a href="tel:7655517630">(765) 551-7630</a></p>
                                         <p><ion-icon name="mail-outline"></ion-icon><a id="email" href="mailto:katie.m.diamond@gmail.com?subject=Let's%20chat!">  katie.m.diamond@gmail.com</a></p>
                                     </div>
                                 </div>
