all new index, links, resume, styles, and script

--- a/links.html
+++ b/links.html
@@ -1,8 +1,8 @@
 <!doctype html>		
 <html lang="en">
     <!-- author:	katie diamond
-    date written: 12/18/2021
-    version: 3 -->
+    date written: 12/20/2021
+    version: 1 -->
 <head>				
 	<title>kd | portfolio</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -28,11 +28,25 @@
 </nav>
 </div>
 <div id="IHC">
-	<p id="header">about katie diamond</p>
-</div><!--close header div-->
-<h2 id="bl">Katie Diamond just graduated from a Web Application Development program and has a project management and technical writing background.</h2>
-<h3 id="bl">She hopes to create meaningful, accessible, and helpful websites, programs, and applications. Katie has a passion and drive to expand her coding skills</h3>
-<h4 id="bl">She has a BA in Telecommunications from Indiana University Bloomington. Katie enjoys painting, coding, reading, and spending time with her family, friends, and her cat.</h4>
+	<p id="header">katie diamond's links</p>
+</div>
+<!-- <h1 id="biggest">education</h1>
+<h2 id="big">Web Application Development Certificate</h2>
+<h3 id="medium">Ivy Tech Community College</h3>
+<h3 id="medium">2020 - 2021</h3>
+<h4 id="bl">At Ivy Tech, I studied Python, JavaScript, PHP, the basics of mySQL, HTML5, and CSS.</h4> -->
+<div id="linksAlign">
+    <a href="https://github.com/thekatiedee" target="_blank"><ion-icon name="logo-github"></ion-icon>  Katie's GitHub</a><br><br>
+    <a href="https://www.linkedin.com/in/katie-diamond-2bb93980/" target="_blank"><ion-icon name="logo-linkedin"></ion-icon>  Katie's LinkedIn</a><br><br>
+    <a href="https://www.dccoaters.net/" target="_blank"><ion-icon name="arrow-redo-outline"></ion-icon> The site Katie made</a><br><br>
+    <a href="https://www.instagram.com/joyful__watercolors/" target="_blank"> <ion-icon name="logo-instagram"></ion-icon> Katie's Art Instagram</a><br><br>
+    <a href="mailto:katie.m.diamond@gmail.com" target="_blank"><ion-icon name="mail-outline"></ion-icon> Email Katie</a><br><br>
+</div>
+<h2 id="smaller">See some writing samples from my time spent as a technical writer:</h2>
+    <ol>
+        <li><a href="https://www.effortlessinsurance.com/massmutual-life-insurance-review/" target="_blank">"Mass Mutual Life Insurance"</a></li>
+        <li><a href="https://www.quickquote.com/accidental-death-life-insurance/" target="_blank">"Accidental Death and Dismemberment Insurance"</a></li>
+    </ol>
 <footer>
 <div id="grid"><!--left side of footer -->
 	<div id="col1">
