made changes to footer
removed items not being used, in script and css files

--- a/links.html
+++ b/links.html
@@ -50,7 +50,7 @@
 <footer>
 <div id="grid"><!--left side of footer -->
 	<div id="col1">
-		<ion-icon name="logo-github"></ion-icon><a id="aGitHub" href="https://github.com/thekatiedee"> Katie's GitHub</a>
+		<ion-icon name="logo-github"></ion-icon><a id="aGitHub" href="https://github.com/thekatiedee" target="_blank"> Katie's GitHub</a>
 	</div>
 	<div id="col2"><!--right side of the footer -->
 		<p>&copy; <span id="thisYear"></span> katie diamond</p>
