--- a/links.html
+++ b/links.html
@@ -38,7 +38,8 @@
 <div id="linksAlign">
     <a href="https://github.com/thekatiedee" target="_blank"><ion-icon name="logo-github"></ion-icon>  Katie's GitHub</a><br><br>
     <a href="https://www.linkedin.com/in/katie-diamond-2bb93980/" target="_blank"><ion-icon name="logo-linkedin"></ion-icon>  Katie's LinkedIn</a><br><br>
-    <a href="https://www.dccoaters.net/" target="_blank"><ion-icon name="arrow-redo-outline"></ion-icon> The site Katie made</a><br><br>
+    <a href="https://integratedhealthconsulting.github.io/" target="_blank"><ion-icon name="arrow-redo-outline"></ion-icon> The healthcare site Katie made</a><br><br>
+    <a href="https://www.dccoaters.net/" target="_blank"><ion-icon name="arrow-redo-outline"></ion-icon> The e-coating site Katie also made</a><br><br>
     <a href="https://www.instagram.com/joyful__watercolors/" target="_blank"> <ion-icon name="logo-instagram"></ion-icon> Katie's Art Instagram</a><br><br>
     <a href="mailto:katie.m.diamond@gmail.com" target="_blank"><ion-icon name="mail-outline"></ion-icon> Email Katie</a><br><br>
 </div>
